# anvil

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
.pm/: snapshot.md
docs/architecture/adrs/: 0003-256color-fallback-over-term-heuristic.md
docs/superpowers/specs/: 2026-03-13-anvil-v030-design.md
src/: app.rs  main.rs
src/config/: keybindings.rs  mod.rs
src/editor/: buffer.rs  cursor.rs  mod.rs  viewport.rs
src/input/: command.rs  handler.rs
src/syntax/: highlighter.rs  languages.rs  mod.rs
src/theme/: mod.rs  palette.rs  retroterm.rs
src/tree/: fs_walker.rs  mod.rs
src/ui/: layout.rs  mod.rs  tabs.rs
